--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- BootStrao Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>Hello, world!</title>
 
     <style>
@@ -58,14 +62,21 @@
         <a class="nav-link px-1 px-sm-2 px-md-3 px-lg-5 " href="{{prev}}" role="button">Prev</a>
       </li>
       <li class="nav-item">
-        <span class="dropdown">
+        <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Chapter {{currentCh}} Page {{currentPg}}
+            Chapter {{currentCh}} Page {{currentPg}}
           </button>
-          <span class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-
-          </span>
-        </span>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            {{#each menu}}
+              {{#with this}}
+                <h6 class="dropdown-header">{{title}}</h6>
+                {{#each pages}}
+                  <a class="dropdown-item" href="{{link}}">Page {{page}}</a>
+                {{/each}}
+              {{/with}}
+            {{/each}}
+          </div>
+        </div>
       </li>
       <li class="nav-item ">
         <a class="nav-link px-1 px-sm-2 px-md-3 px-lg-5" href="{{next}}" role="button">Next</a>
