removed watcher.js and prependZero.js. Created helperfunction script for server.js

--- a/public/about.html
+++ b/public/about.html
@@ -23,7 +23,8 @@
 	<body>
 		<div class="container-fluid">
 			 <!-- Banner -->
-      <img class="mx-auto d-block img-fluid" src="https://via.placeholder.com/728x90.png?text=Star+Warrior+Legends" />
+      <!--<img class="mx-auto d-block img-fluid" src="https://via.placeholder.com/728x90.png?text=Star+Warrior+Legends" />-->
+      <img class="mx-auto d-block img-fluid" src="../public/image/Bannerdraft.png" />
 
       <!-- Links -->
       <ul class="nav justify-content-center">
