--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,9 @@
         <!-- Chapter Name and page number-->
         <h4>Chapter {{currentCh}}: {{title}} - Page {{currentPg}}</h4>
         <!-- Comic image -->
-        <img class="mx-auto d-block img-fluid" width="66%" src="https://via.placeholder.com/2250x3500.png?text=Star+Warrior+Legends+Comic+Goes+Here" />
+
+        <!-- <img class="mx-auto d-block img-fluid" width="66%" src="https://via.placeholder.com/2250x3500.png?text=Star+Warrior+Legends+Comic+Goes+Here" /> -->
+        <img class="mx-auto d-block img-fluid" width="66%" src="{{img}}" />
       </div>
       <!-- Comic Navigation --> 
 
