--- a/public/about.html
+++ b/public/about.html
@@ -40,24 +40,26 @@
           <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
+
 			<div class="row">
 				<div class="col"></div>
 				<!-- Col 1 -->
-				<div class="col-3">
-					<img class="mt-5" src="https://via.placeholder.com/300" />
+				<div class="col-12 col-sm-5 col-md-5 col-lg-4 col-xl-3" >
+					<img class="mt-5 mt-lg-3 mx-auto d-block" src="https://via.placeholder.com/300" />
 				</div>
 				<!-- Col 2 -->
-				<div class="col-5">
+				<div class="col-12 col-sm-5 col-md-5 col-lg-5 col-xl-5">
 					<h2 class="mt-1">About the Author</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim feugiat varius. Vestibulum molestie, risus id faucibus imperdiet, sapien lectus fringilla nisl, in volutpat lacus turpis at lectus. Etiam risus tellus, feugiat non fermentum et, molestie sed lacus. Morbi posuere arcu a enim laoreet lobortis. Cras ut lacus elit. Nunc at posuere mi. Maecenas a faucibus risus, ac vehicula erat. Cras laoreet congue elit. In nulla felis, convallis nec commodo a, venenatis ut magna. Duis sollicitudin quis turpis eu egestas. Nulla mollis porta euismod. Nunc dignissim, urna quis mollis bibendum, leo leo dictum tortor, eget fermentum ex tortor at est. Donec urna orci, pellentesque vel dignissim in, laoreet quis augue. Morbi tincidunt odio ut enim pulvinar ornare. Vestibulum id enim luctus magna auctor ornare in sed purus.
 					</p>
 				</div>
 				<div class="col"></div>
 			</div>
+
 			 <!-- Footer -->
       <hr />
       <footer>
-        <p class="text-center">Copyright stuff here</p>
+        <p class="text-center"><small>Copyright &copy; 2019, Dragon Pop Studios</small></p>
       </footer>
 		</div>
 	</body>
