--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
       <!-- Footer -->
       <hr />
       <footer>
-        <p class="text-center">Copyright stuff here</p>
+        <p class="text-center"><small>Copyright &copy; 2019, Dragon Pop Studios</small></p>
       </footer>
     </div>
   </body>
